--- a/ThuThapDuLieu/thu_thap_du_lieu.ipynb
+++ b/ThuThapDuLieu/thu_thap_du_lieu.ipynb
@@ -53,8 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Phiên bản Python 3.12.0\n",
     "driver = selenium.webdriver.Chrome()\n",
-    "base_url = \"https://ourworldindata.org/explorers/energy?\""
+    "base_url = \"https://ourworldindata.org/explorers/energy?\"\n",
+    "\n",
+    "\n",
+    "#Phiên bản Python 3.11.5\n",
+    "# Cần tải file chromedriver.exe và thêm vào trong code như sau:\n",
+    "# driver = selenium.webdriver.Chrome(\"../chromedriver.exe\")"
    ]
   },
   {
