--- a/Visualize_Datcauhoi/visualize_va_dat_cau_hoi.ipynb
+++ b/Visualize_Datcauhoi/visualize_va_dat_cau_hoi.ipynb
@@ -788,8 +788,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Nhận xét:**\n",
-    "    Dựa vào biểu đồ trên, ta có thể thấy được loại năng lượng nào quan trọng đối với quốc gia đó"
+    "    Nhận xét: \n",
+    "        - Các quốc gia có tỉ lệ sử dụng năng lượng trên 50% chứng tỏ năng lượng đó quan trọng nhất đối với quốc gia đó.\n",
+    "        - Các dữ liệu dưới 50%, cần kết hợp với các loại năng lượng khác để biết cụ thể hơn.\n",
+    "        - Dựa vào biểu đồ trên, ta còn có thể nhận ra được quốc gia nào đi tiên phong trong nền năng lượng có thể tái tạo."
    ]
   },
   {
@@ -844,6 +846,16 @@
     "sns.heatmap(correlation_matrix, annot=True,fmt= \".2f\", linewidth=.5)\n",
     "plt.title('Tương quan năng lượng của 10 quốc gia tiêu thụ nhiên liệu hóa thạch nhiều nhất')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Nhận xét:\n",
+    "        - Năng lượng hóa thạch, dầu và gió có sự tương quan cao chứng tỏ có sự tác động qua lại rất nhiều\n",
+    "        - Khí gas nhận được ít sự tương quan chứng tỏ nó ít bị tác động\n",
+    "        - Ta có thể biết loại năng lượng nào ảnh hưởng nhiều đối với năng lượng mà ta đang xét."
    ]
   }
  ],
